--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="update_profile">Update Profile</string>
+    <string name="upload_documents">Upload Documents</string>
+    <string name="search">Search</string>
+    <string name="add_money">Add Money</string>
+    <string name="transfer_money">Transfer Money</string>
+    <string name="transaction_history">Transaction History</string>
+    <string name="search_on_map">Search On Map</string>
+    <string name="loan">Loan</string>
 </resources>
