--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ExampleKotlin</string>
+    <string name="app_name">Payment Transfer</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -47,4 +47,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="verify">Verify</string>
+    <string name="enter_otp_to_verify">Enter OTP to verify</string>
 </resources>
