--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="verify">Verify</string>
     <string name="enter_otp_to_verify">Enter OTP to verify</string>
+    <string name="admin">Admin</string>
+    <string name="update">Update</string>
+    <string name="search_file_by_name">Search file by name</string>
 </resources>
