--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="view_users">View Users</string>
 
     <string name="approve">Approve</string>
+    <string name="reject">Reject</string>
 
 
     <string-array name="loan_reasons">
